--- a/layout/css-st/list/index5.html
+++ b/layout/css-st/list/index5.html
@@ -24,15 +24,6 @@
                 float: left;
                 width: 8em;
             }
-            ul.nav li ul{
-                position: absolute;
-                width: 8em;
-                margin-left: -1px;
-                left: -999em;
-            }
-            .nav li:hover ul {
-                left: auto;
-            }
             ul.nav a{
                 text-align: center;
                 display: block;
@@ -42,6 +33,17 @@
                 border-right: 1px solid #486B02;
                 border-left: 1px solid #E4FFD3;
             }
+            /*second*/
+            ul.nav li ul{
+                position: absolute;
+                width: 8em;
+                margin-left: -1px;
+                left: -999em;
+            }
+            .nav li:hover ul {
+                left: auto;
+            }
+            
             ul.nav li li a {
                 border-top: 1px solid #E4FFD3;
                 border-bottom: 1px solid #486B02;   
