--- a/layout/roman/css/form.css
+++ b/layout/roman/css/form.css
@@ -2,7 +2,21 @@
 	form common
 */
 .f{
-	
+	font-family: ;
+	font-size: ;
+	font-style: ;
+	font-weight: ;
+
+	font: (font-weight,font-style,font-variant) font-size font-family;
+
+	text-indent: ;
+	letter-spacing: ;
+	word-spacing: ;
+	text-decoration: none;
+	text-align: center;
+	line-height: 1.5;
+	text-transform: ;
+	vertical-align: middle;
 }
 /*----------------------------------
 	form
