--- a/layout/roman/index.html
+++ b/layout/roman/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400italic,700italic,600italic,600,400,700|Lato:700italic,400,400italic,700,900italic,900" rel="stylesheet" type="text/css">
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400italic,700italic,600italic,600,400,700|Lato:700italic,400,400italic,700,900italic,900' rel='stylesheet' type='text/css'>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Bootstrap的HTML标准模板</title>
         <!--你自己的样式文件 --> 
-        <link href="../../lib/bootstrap-lib/normalize.css" rel="stylesheet">
-        <link href="../../lib/bootstrap-lib/common.css" rel="stylesheet">
         <link href="css/include.css" rel="stylesheet">
         <!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
         <!--[if lt IE 9]>
@@ -18,7 +16,7 @@
     </head>
     <body ontouchstart="">
         <div id="wrapper">
-            <header class="back">
+            <header>
                 <a href="/index.html" title="go to home">
                     <section id="title">
                         <!--log-->
