--- a/common/lib.css
+++ b/common/lib.css
@@ -207,3 +207,19 @@ div.dib{*display:inline;*zoom:1;}
   -ms-user-select: none;
   user-select: none;
 }
+/* icon居中 不能设置overflow:hidden*/
+.icon { 
+  display: inline-block; 
+  width:20px; height:20px; 
+  background: url(delete.png) no-repeat center; 
+  white-space:nowrap; 
+  letter-spacing: -1em; 
+  text-indent: -99em; 
+  color: transparent;
+  /* IE7 */
+  *text-indent: 0;
+  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\3000');
+}
+.icon:before {
+  content: '\3000';
+}
