--- a/common/ui.css
+++ b/common/ui.css
@@ -15,4 +15,5 @@
 @import url('ui/DropPanel.css');
 @import url('ui/Date.css');
 @import url('ui/Scrollbar.css');
-@import url('ui/Accordion.css');
+@import url('ui/Placeholder.css');
+@import url('ui/Pagination.css');
